parsing ok, norminette room and link - ok

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -98,6 +98,8 @@ FUNCTIONS	+= printf_float_double.c
 FUNCTIONS	+= printf_oux.c
 FUNCTIONS	+= ft_check_sign_double.c
 FUNCTIONS	+= ft_doublstrdel.c
+FUNCTIONS	+= ft_cntchr.c
+FUNCTIONS	+= ft_strdeli.c
 
 BINARY		= $(FUNCTIONS:.c=.o)
 
